# book_store

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
books/books/: settings.py
books/store/migrations/: 0001_initial.py
books/store/tests/: __init__.py
